Fix bounds clamping during composited smooth scroll.

Also improve handling of nop UpdateTarget.

BUG=609178
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1950613004
Cr-Commit-Position: refs/heads/master@{#391652}

Former-commit-id: 4d7f47cc84c9b52774814419791ad774536e5cfd